# IHR550-GUI

./: README.md  pyproject.toml
Test/: Test_Gui.py
src/ihr550_spectrometer_gui/: Spec_Gui_MM_Test.py  __init__.py  config.toml  gui.py
