[project]
name = "ihr550-spectrometer-gui"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jamin Martin", email = "jamin.martin1@gmail.com" }
]
dependencies = [
    "spcs-instruments>=0.7.1",
    "ttkbootstrap>=1.10.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ihr550_spectrometer_gui"]
